apps/loki/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:3.7.8
          ports:
            - containerPort: 3100
          resources:
            requests:
              memory: 256Mi
            limits:
              memory: 384Mi
          volumeMounts:
            - name: config-volume
              mountPath: /loki
              subPath: loki
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: data-pvc
